--- a/_config.yml
+++ b/_config.yml
@@ -1,30 +1,18 @@
-title: Hanlin Cai
-# tagline: Here is personal website of Hanlin Cai. Powered by Jekyll, based on the Minimal Mistakes theme.
-# description: Two roads diverged in woods, I took the one less traveled by.
+title: Zichao Xiao
+# tagline: Here is personal website of Zichao Xiao. Powered by Jekyll, based on the Minimal Mistakes theme.
 #Comment out url when working locally to resolve base urls correctly
-url: https://caihanlin.com
+url: https://zichaoxiao1999.github.io
 
 # Owner/author information
 owner:
-  name: Hanlin Cai
-  avatar: hanlin.jpg
-  # bio: Two roads diverged in woods, I took the one less traveled by.
-  email: hanlin.cai@ieee.org
+  name: Zichao Xiao
+  avatar: Zichao.jpg
+  # bio: 
+  email: xiaozichao@mail.dlut.edu.cn
   cv: https://caihanlin.com/file/CV-HanlinCAI.pdf
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
-  twitter: lancecai2002
-  github: GuangLun2000
-  linkedin: hanlincai
-  scholar: https://scholar.google.com/citations?user=8igSoWgAAAAJ
-  bilibili: 594030035
-  researchgate: https://www.researchgate.net/profile/Hanlin-Cai
-  zhihu: https://www.zhihu.com/people/chlire
-  # facebook: caihanlin2002
-  # instagram: lancecai2002
-  # lastfm:
-  # tumblr:
-  # For Google Authorship https://plus.google.com/authorship
-  # google_plus:
+  scholar: https://scholar.google.com/citations?user=N6_sCBoAAAAJ&hl=zh-CN
+  researchgate: https://www.researchgate.net/profile/Zichao-Xiao
 
 # Analytics and webmaster tools stuff goes here
 # https://search.google.com/search-console/ownership
@@ -42,14 +30,8 @@ links:
     url: /publications/
   - title: Awards
     url: /awards/
-  - title: Teams
-    url: /teams/
   - title: Hobbies
     url: /hobbies/
-  # - title: Notes
-    # url: /notes/
-  - title: Blogs
-    url: /blogs/
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 timezone: China/Beijing
